# luxe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LESSONS.md  README.md  RESUME.md  agents.md  architecture.md  lessons.md  pyproject.toml
.claude/: settings.json
benchmarks/: EXTENDED_BENCH.md
configs/: chat.yaml  chat_bare.yaml  deepseek_32gb.yaml  mcp.yaml  mode.yaml  pr.yaml  qwen_32gb.yaml  single_64gb.yaml  single_64gb_swebench.yaml  single_64gb_swebench_counterexample.yaml  (+2 more)
luxe/: .gitignore  README.md  SESSION_REPORT_2026-04-26.md  pyproject.toml
luxe/benchmarks/: _common.py  _eval_plus_grader.py  compression_repo.py  livecodebench.py  luxe_replay.py  mbpp_plus.py  prefix_cache_decay.py  swebench_lite.py  tau_bench.py
luxe/cli/: README.md  __init__.py  backend.py  import_graph.py  main.py  registry.py  review.py  router.py  runner.py  secrets.py
luxe/cli/agents/: base.py  calc.py  code.py  general.py  image.py  lookup.py  refactor.py  research.py  review.py  stubs.py  writing.py
luxe/cli/repl/: __init__.py  aliases.py  core.py  models.py  prompt.py  review.py  status.py  tasks.py
luxe/cli/tasks/: __init__.py  clarify.py  model.py  orchestrator.py  planner.py  report.py  run.py  spawn.py
luxe/cli/tools/: analysis.py  fs.py  git_tools.py  shell.py  web.py
luxe/configs/: agents.yaml  candidates.yaml  optimization_configs.yaml
luxe/daily_driver/: README.md  VERIFY.md  aider.conf.yml  claude-local  install.sh  install_luxe.sh  litellm_bridge.yml  opencode.example.json  secrets.env.example
luxe/daily_driver/launchd/: com.luxe.litellm.plist  com.luxe.mlx.plist  com.luxe.ollama.plist
luxe/daily_driver/repo_context/: isomer.md  neon-rain.md  never-say-yes.md  sole-survivor.md  zoleb.md
luxe/fixtures/compression_repos/example_small_repo/: collections_utils.py  stats.py  strings.py
luxe/fixtures/compression_repos/example_small_repo/tests/: test_collections_utils.py  test_math.py  test_stats.py
luxe/fixtures/compression_tasks/: bugfix_dedupe_unhashable.json  bugfix_parse_iso_date_tz.json  bugfix_slugify_whitespace.json  bugfix_small_repo_001.json
luxe/harness/: __init__.py  backends.py  cli.py  io.py  registry.py  server.py
luxe/luxe/: README.md  backend.py  cli.py  heuristic_router.py  import_graph.py  repo_survey.py  review.py  router.py  runner.py  tool_library.py
luxe/luxe/agents/: base.py  image.py  lookup.py  refactor.py  research.py  review.py  stubs.py
luxe/luxe/repl/: __init__.py  aliases.py  models.py  review.py  status.py  tasks.py
luxe/luxe/tasks/: clarify.py  orchestrator.py  report.py  spawn.py
luxe/luxe/tools/: analysis.py  git_tools.py  shell.py
luxe/luxe_cli/: README.md  backend.py  git.py  heuristic_router.py  import_graph.py  main.py  prefs.py  providers.py  registry.py  repo_survey.py  review.py  router.py  runner.py  session.py  venv_check.py
luxe/luxe_cli/agents/: base.py  calc.py  code.py  general.py  image.py  lookup.py  refactor.py  research.py  review.py  stubs.py  writing.py
luxe/luxe_cli/providers/: __init__.py  lmstudio.py  ollama.py  omlx.py  openai_compat.py
luxe/luxe_cli/repl/: __init__.py  aliases.py  core.py  models.py  prompt.py  review.py  status.py  tasks.py
luxe/luxe_cli/tasks/: __init__.py  cache.py  clarify.py  model.py  orchestrator.py  plan_cache.py  planner.py  report.py  run.py  spawn.py
luxe/luxe_cli/tools/: analysis.py  browser.py  fs.py  git_tools.py  shell.py
luxe/personal_eval/: agent_loop.py  gh_ingest.py  repo_resolver.py  rubric.py  write_replay.py
luxe/results/: review_quality_2026-04-27.md
luxe/results/ab_ollama_vs_llamacpp/: README.md
luxe/results/ab_ollama_vs_omlx/: REPORT.csv  REPORT.md  VERDICT.csv  VERDICT.md
luxe/results/ab_qwen25_vs_qwen3/: REPORT.md
luxe/results/luxe_eval/general/: gemma3_12b.md  mixtral_8x7b-instruct-v0.1-q3_K_M.md  qwen2.5_7b-instruct.md
luxe/results/luxe_eval/writing/: command-r_35b.md  llama3.3-70b-4k_latest.md  mistral-small_24b.md  mixtral_8x7b.md  qwen2.5_32b-instruct.md
luxe/results/orchestrator_bench/: history.jsonl
luxe/scripts/: aggregate_multi_turn.py  analyze_compression_sweep.py  bench_orchestrator.py  composite_verdict.py  llamacpp_spec_test.py  lmstudio_healthcheck.py  omlx_configure_dflash.py  omlx_healthcheck.py  omlx_verdict.py  overnight_tail.py  probe_lmstudio_tools.py  probe_omlx_gemma.py  probe_omlx_swap.py  run_ab_benchmark.py  run_lmstudio_recheck.sh  run_luxe_eval.py  run_overnight.py  run_overnight_catchup.sh  run_overnight_supervised.sh  run_phase_c.py  run_phase_d.py  smoke_test.py  spec_decoding_verdict.py  summarize_runs.py  tail_progress.sh  verify_jsonl_schema.py
luxe/scripts/archive/: lmstudio_healthcheck.py  probe_lmstudio_review.py  probe_lmstudio_stream.py  probe_lmstudio_tools.py
luxe/scripts/launchd/: com.luxe.omlx-restart.plist
luxe/shared/: trace_hints.py
luxe/strategies/: stages.py
luxe/strategies/configs/: retrieve_oracle.json  stack_trace_guided_wf.json
luxe/tests/: test_agent_cache_and_schema.py  test_backend_cache.py  test_cache_dir.py  test_compression_repo.py  test_git.py  test_help_render.py  test_lmstudio_smoke.py  test_orchestrator_trace_hints.py  test_parsers.py  test_provider_health.py  test_provider_resolve.py  test_providers.py  test_router_fallback.py  test_schema_validation.py  test_session.py  test_tasks_routing.py  test_tool_cache.py  test_tool_library.py  test_venv_check.py
(+466 files in other folders)
