[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luxe"
version = "1.0.0"
description = "luxe — MLX-only repo maintainer (single-model + specialist swarm modes)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "mcp>=1.0",
    "rank_bm25>=0.2.2",
    "tree-sitter>=0.20,<0.22",
    "tree-sitter-languages>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
luxe = "luxe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/luxe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
