[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luxe"
version = "1.6.1"
description = "luxe — MLX-only repo maintainer (mono-only; SpecDD Lever 2)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "mcp>=1.0",
    "rank_bm25>=0.2.2",
    "tree-sitter>=0.20",
    "tree-sitter-language-pack>=0.13,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# The static-analysis toolchain the `lint`/`typecheck`/`security_scan`/`deps_audit`
# tools shell out to. Install (`pip install -e '.[analyzers]'`) so a fresh box
# isn't missing them — the M1 iteration-2 run had no ruff and silently skipped
# linting. The tools also resolve these via `python -m`/`uvx` when present.
analyzers = ["ruff>=0.4", "mypy>=1.8", "bandit>=1.7", "pip-audit>=2.7"]
# Required to run the vendored BFCL multi_turn evaluator (MathAPI uses mpmath).
# Do NOT add bfcl_eval here — it pins tree_sitter==0.21.3 and breaks symbols.py
# (the multi_turn eval is vendored under benchmarks/bfcl/multi_turn/ instead).
bfcl = ["mpmath>=1.3"]
# Extended-benchmark suite (MMLU / ARC-Challenge / GSM8K / CodeNeedle /
# Perplexity). esprima parses JS for the codeneedle needle-extractor;
# mlx_lm loads model weights in-process for logprob-based scoring
# (oMLX drops logprobs); datasets fetches MMLU/ARC/GSM8K/WikiText.
extended-bench = [
    "esprima>=4.0",
    "mlx_lm>=0.31",
    "datasets>=2.0",
]
# Interactive `luxe chat` REPL. prompt_toolkit gives the line editor (history,
# multi-line, key handling); without it the REPL degrades to input(). Not a
# base dep so benchmark/headless installs stay lean.
chat = ["prompt_toolkit>=3.0"]

[project.scripts]
luxe = "luxe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/luxe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_model: requires the 35B model loaded in-process via mlx_lm (skip by default; run manually after stopping oMLX)",
    "live_backend: requires a running oMLX HTTP server (skip by default in CI)",
]
